# igvc_self_drive_gazebo

./: CMakeLists.txt  package.xml  task_sequence.yaml
Scripts_DM_ML_Node/: DM_Node.py  lane_extraction.py
action/: Intersection.action  stopline.action
launch/: f10_gazebo.launch  f11_gazebo.launch  f12_gazebo.launch  f1_gazebo.launch  f2_gazebo.launch  f3_gazebo.launch  f4_gazebo.launch  f5_gazebo.launch  f6_gazebo.launch  f7_gazebo.launch  f9_gazebo.launch  load_task_world.launch  q2_gazebo.launch  q3_gazebo.launch  q4_gazebo.launch  q5_gazebo.launch  spawn_gem.launch
models/curved_road_10_1/: model.config  model.sdf
models/curved_road_10_2/: model.config  model.sdf
models/curved_road_10_3/: model.config  model.sdf
models/curved_road_10_4/: model.config  model.sdf
models/manaquein/: model.config  model.sdf
models/parallel_parking/: model.config  model.sdf
models/parking_space_yellow/: model.config  model.sdf
models/pothole/: model.sdf
models/road_ground_1/: model-1_4.sdf  model.config  model.sdf
msg/: CV.msg
scripts/: DM_Node.py  ML_Node.py  image_view.py  intersection_action_server.py  intersection_client_server.py  lane_det.py  lane_det2.py  lane_extraction.py  lanechangingclient.py  lanechangingserver.py  master_asli_code.py  stop_line_action_client.py  stop_line_test_with_best_path.py  stop_lines_test.py  task_seq.py  task_sequence.yaml  test.py
src/: lane_extraction.py  modified_vel_arr.cpp  purepirsuit.cpp  stop_line_action_client.py  stop_line_mp.cpp  stopline.action
worlds/: pullinout.world  sedrica_intersection.world  sedrica_intersection_with parking.world  self_drive_tasks.world
(+77 files in other folders)
